<resources>
    <string name="app_name">HW_AndroidIntro</string>
    <string name="clickCount_text">
        TASK 1 : Make a simple application with two button when clicked
        change the text to the number of times the item was clicked.
        Make sure the first button is using implicit declaration and
        the other explicit declaration.
    </string>
    <string name="changeByClick_text">
        TASK 2 : Add three buttons and one textView when a button is clicked
        change the text of the textView to the id of the button.
        If the same button is pressed twice display the text inside the button.
        On textView click when item was selected open a new activity and
        inside of it show component ID and name.
    </string>
    <string name="text_btn_start_clickCount">Click Count</string>
    <string name="text_btn_start_changeByClick">Change By Click</string>
    <string name="text_clickToCount">Click To Count</string>
    <string name="text_red_btn">Red Button</string>
    <string name="text_yellow_btn">Yellow Button</string>
    <string name="text_green_btn">Green Button</string>

</resources>
