<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tatyana.hw_androidintro.MainActivity">

    <TextView
        android:id="@+id/clickCount_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/clickCount_text"
        android:textSize="@dimen/textView_font_size"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/btn_start_clickCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clickCount_description"
        android:layout_centerHorizontal="true"
        android:text="@string/text_btn_start_clickCount"/>

    <TextView
        android:id="@+id/changeByClick_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_start_clickCount"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/changeByClick_text"
        android:textSize="@dimen/textView_font_size"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/btn_start_changeByClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changeByClick_description"
        android:layout_centerHorizontal="true"
        android:text="@string/text_btn_start_changeByClick"/>

</RelativeLayout>
