<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/textView_top_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text=" "
        android:textSize="20dp"/>

    <Button
        android:id="@+id/red_btn"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_below="@+id/textView"
        android:background="@color/red"
        android:text="@string/text_red_btn"/>

    <Button
        android:id="@+id/yellow_btn"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_below="@+id/red_btn"
        android:background="@color/yellow"
        android:text="@string/text_yellow_btn"/>

    <Button
        android:id="@+id/green_btn"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_below="@+id/yellow_btn"
        android:background="@color/green"
        android:text="@string/text_green_btn"/>

</RelativeLayout>